[gd_scene load_steps=6 format=2]

[ext_resource path="res://Bingo.gd" type="Script" id=1]
[ext_resource path="res://numbers.gd" type="Script" id=2]
[ext_resource path="res://assets/yellow.png" type="Texture" id=3]
[ext_resource path="res://assets/fontX.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/font.tres" type="DynamicFont" id=5]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Numbers" type="Node" parent="."]

[node name="B1" type="Button" parent="Numbers"]
margin_left = 24.0
margin_top = 16.0
margin_right = 88.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B1"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B2" type="Button" parent="Numbers"]
margin_left = 88.0
margin_top = 16.0
margin_right = 152.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B2"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B3" type="Button" parent="Numbers"]
margin_left = 152.0
margin_top = 16.0
margin_right = 216.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B3"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B4" type="Button" parent="Numbers"]
margin_left = 216.0
margin_top = 16.0
margin_right = 280.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B4"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B5" type="Button" parent="Numbers"]
margin_left = 280.0
margin_top = 16.0
margin_right = 344.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B5"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B6" type="Button" parent="Numbers"]
margin_left = 24.0
margin_top = 80.0
margin_right = 88.0
margin_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B6"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B7" type="Button" parent="Numbers"]
margin_left = 88.0
margin_top = 80.0
margin_right = 152.0
margin_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B7"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B8" type="Button" parent="Numbers"]
margin_left = 152.0
margin_top = 80.0
margin_right = 216.0
margin_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B8"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B9" type="Button" parent="Numbers"]
margin_left = 216.0
margin_top = 80.0
margin_right = 280.0
margin_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B9"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B10" type="Button" parent="Numbers"]
margin_left = 280.0
margin_top = 80.0
margin_right = 344.0
margin_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B10"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B11" type="Button" parent="Numbers"]
margin_left = 24.0
margin_top = 144.0
margin_right = 88.0
margin_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B11"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B12" type="Button" parent="Numbers"]
margin_left = 88.0
margin_top = 144.0
margin_right = 152.0
margin_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B12"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B13" type="Button" parent="Numbers"]
margin_left = 152.0
margin_top = 144.0
margin_right = 216.0
margin_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B13"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B14" type="Button" parent="Numbers"]
margin_left = 216.0
margin_top = 144.0
margin_right = 280.0
margin_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B14"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B15" type="Button" parent="Numbers"]
margin_left = 280.0
margin_top = 144.0
margin_right = 344.0
margin_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B15"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B16" type="Button" parent="Numbers"]
margin_left = 24.0
margin_top = 208.0
margin_right = 88.0
margin_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B16"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B17" type="Button" parent="Numbers"]
margin_left = 88.0
margin_top = 208.0
margin_right = 152.0
margin_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B17"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B18" type="Button" parent="Numbers"]
margin_left = 152.0
margin_top = 208.0
margin_right = 216.0
margin_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B18"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B19" type="Button" parent="Numbers"]
margin_left = 216.0
margin_top = 208.0
margin_right = 280.0
margin_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B19"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B20" type="Button" parent="Numbers"]
margin_left = 280.0
margin_top = 208.0
margin_right = 344.0
margin_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B20"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B21" type="Button" parent="Numbers"]
margin_left = 24.0
margin_top = 272.0
margin_right = 88.0
margin_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B21"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B22" type="Button" parent="Numbers"]
margin_left = 88.0
margin_top = 272.0
margin_right = 152.0
margin_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B22"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B23" type="Button" parent="Numbers"]
margin_left = 152.0
margin_top = 272.0
margin_right = 216.0
margin_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B23"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B24" type="Button" parent="Numbers"]
margin_left = 216.0
margin_top = 272.0
margin_right = 280.0
margin_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B24"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B25" type="Button" parent="Numbers"]
margin_left = 280.0
margin_top = 272.0
margin_right = 344.0
margin_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Numbers/B25"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 480.0
margin_top = 16.0
margin_right = 608.0
margin_bottom = 144.0
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leader" type="RichTextLabel" parent="."]
margin_left = 472.0
margin_top = 192.0
margin_right = 600.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turn" type="Label" parent="."]
margin_left = 472.0
margin_top = 144.0
margin_right = 600.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ip" type="Label" parent="."]
margin_left = 344.0
margin_top = 16.0
margin_right = 472.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 5 )
text = "Enter Ip"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 344.0
margin_top = 48.0
margin_right = 472.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 448.0
margin_top = 272.0
margin_right = 600.0
margin_bottom = 336.0
text = "switch to server"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tree_entered" from="." to="." method="_on_Game_tree_entered"]
[connection signal="pressed" from="Numbers/B1" to="Numbers/B1" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B2" to="Numbers/B2" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B3" to="Numbers/B3" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B4" to="Numbers/B4" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B5" to="Numbers/B5" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B6" to="Numbers/B6" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B7" to="Numbers/B7" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B8" to="Numbers/B8" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B9" to="Numbers/B9" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B10" to="Numbers/B10" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B11" to="Numbers/B11" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B12" to="Numbers/B12" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B13" to="Numbers/B13" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B14" to="Numbers/B14" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B15" to="Numbers/B15" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B16" to="Numbers/B16" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B17" to="Numbers/B17" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B18" to="Numbers/B18" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B19" to="Numbers/B19" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B20" to="Numbers/B20" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B21" to="Numbers/B21" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B22" to="Numbers/B22" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B23" to="Numbers/B23" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B24" to="Numbers/B24" method="_on_Button_pressed"]
[connection signal="pressed" from="Numbers/B25" to="Numbers/B25" method="_on_Button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Send_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
